errors.txt
main.cpp:24:28: error: no matching function for call to 'arraysize'
  return accumulate(a, a + arraysize<T>(a), 0, add<T>);
                           ^~~~~~~~~~~~
main.cpp:37:16: note: in instantiation of function template specialization 'sum<int>' requested here
  std::cout << sum(a) << "\n" << prod(a);
               ^
main.cpp:7:13: note: candidate template ignored: failed template argument deduction
std::size_t arraysize(T (&)[Size]) { return Size; }
            ^
main.cpp:30:28: error: no matching function for call to 'arraysize'
  return accumulate(a, a + arraysize<T>(a), 1, mul<T>);
                           ^~~~~~~~~~~~
main.cpp:37:34: note: in instantiation of function template specialization 'prod<int>' requested here
  std::cout << sum(a) << "\n" << prod(a);
                                 ^
main.cpp:7:13: note: candidate template ignored: failed template argument deduction
std::size_t arraysize(T (&)[Size]) { return Size; }
            ^
2 errors generated.
